--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
 <script src="libs/dt-plugin-searchhighlight-1.10.20/source.min.js"></script>
 <link href="libs/crosstalk-1.1.1/css/crosstalk.css" rel="stylesheet" />
 <script src="libs/crosstalk-1.1.1/js/crosstalk.min.js"></script>
+<link href="libs/dt-ext-fixedcolumns-1.10.20/css/fixedColumns.dataTables.min.css" rel="stylesheet" />
+<script src="libs/dt-ext-fixedcolumns-1.10.20/js/dataTables.fixedColumns.min.js"></script>
 
 
 <style type="text/css">
@@ -167,7 +169,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4" data-path="cross-disease-comparisons.html"><a href="cross-disease-comparisons.html"><i class="fa fa-check"></i><b>4</b> Cross-disease comparisons</a>
 <ul>
 <li class="chapter" data-level="4.1" data-path="cross-disease-comparisons.html"><a href="cross-disease-comparisons.html#do-comparison"><i class="fa fa-check"></i><b>4.1</b> Do comparison</a></li>
-<li class="chapter" data-level="4.2" data-path="cross-disease-comparisons.html"><a href="cross-disease-comparisons.html#gene-clusters"><i class="fa fa-check"></i><b>4.2</b> Gene clusters</a></li>
+<li class="chapter" data-level="4.2" data-path="cross-disease-comparisons.html"><a href="cross-disease-comparisons.html#clustered-genes"><i class="fa fa-check"></i><b>4.2</b> Clustered genes</a></li>
 </ul></li>
 <li class="divider"></li>
 <li>Email: fh12355@rjh.com.cn</li>
@@ -194,14 +196,9 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="index" class="section level1" number="1">
 <h1><span class="header-section-number">Section 1</span> Overview</h1>
+<p><img src="KSD_files/figure-html/logo-1.png" width="50%" style="display: block; margin: auto auto auto 0;" /></p>
 <div id="contribution" class="section level2" number="1.1">
 <h2><span class="header-section-number">1.1</span> Contribution</h2>
-<div class="figure" style="text-align: center"><span id="fig:logo"></span>
-<img src="KSD_files/figure-html/logo-1.png" alt="Logo designed for the project webpage here (https://23verse.github.io/kids)." width="30%" />
-<p class="caption">
-Figure 1.1: Logo designed for the project webpage here (<a href="https://23verse.github.io/kids" class="uri">https://23verse.github.io/kids</a>).
-</p>
-</div>
 <p>Inflammatory response plays a key role in kidney stone formation, and targeting innate immunity is an increasingly appreciated immunotherapeutic strategy in treating and preventing kidney stone disease. This study shows that identification of crosstalk between inflammatory pathways underlying disease risk can inform therapeutic targets for rational drug selection. To highlight this utility, we identify ulixertinib and losmapimod, two inhibitors of inflammatory mediators that are now under clinical investigation. An atlas of genetic targets, together with candidate drugs we reposition here, can be of translational use to manage kidney stones for years to come.</p>
 </div>
 <div id="abstract" class="section level2" number="1.2">
